Abakus azure callback + div sonar